# eth-bot-detector

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  docker-entrypoint.sh  pyproject.toml  run.py  settings.py
app/bot_detector/: __main__.py  agents.py  alchemy_models.py  app.py  commands.py  faust_models.py  models.py  pages.py  periodic_tasks.py  tables.py  topics.py
